<resources>
    <string name="error_msg">Sorry, AppOps settings cannot be launched on this Android device. I am now useless, so uninstall me ! :-(</string>
    <string name="app_name">Spermission</string>
    <string name="permission_settings_loading">Loading</string>
    <string name="refresh">Refresh List</string>
    <string name="alert_database_nottodate_text">Database is not up to date, do you want to update it ?</string>
    <string name="alert_database_nottodate_yes">Yes</string>
    <string name="alert_database_nottodate_no">No</string>
    <string name="category_tab_name">Categories</string>
    <string name="application_tab_name">Applications</string>
    <string name="permission_tab_name">Permissions</string>
    <string name="dialog_update_text">Scanning device, please wait.</string>
    <string name="dialog_uptodate_text">Checking changes, please wait.</string>
    <string name="application_detail_nodata">No data received</string>
    <string name="application_detail_package">Package</string>
    <string name="application_detail_version">Version (code / name)</string>
    <string name="application_detail_permission_count">Permissions count</string>
    <string name="application_detail_permission_used">Permissions used</string>
    <string name="application_detail_manager_unavailable">Function available only for Android >= 2.3</string>
    <string name="application_detail_system">System</string>
    <string name="permission_detail_nodata">No data received</string>
    <string name="permission_detail_description">Description</string>
    <string name="permission_detail_application_count">Application count</string>
    <string name="permission_detail_application_using">Applications using permission</string>
    <string name="category_detail_nodata">No data received</string>
    <string name="category_detail_description">Description</string>
    <string name="category_detail_application_count">Application count</string>
    <string name="category_detail_application_using">Applications in this category</string>
    <string name="preference_application_name_title">Display the application name</string>
    <string name="preference_application_name_true">The application name is displayed</string>
    <string name="preference_application_name_false">The application package is displayed</string>
    <string name="preference_application_order_title">Order applications by name</string>
    <string name="preference_application_order_true">Applications are ordered by name</string>
    <string name="preference_application_order_false">Applications are ordered by permission count</string>
    <string name="preference_application_hide_system_app_title">Hide system applications</string>
    <string name="preference_application_hide_system_app_true">System apps are hidden</string>
    <string name="preference_application_hide_system_app_false">System apps are shown</string>
    <string name="preference_permission_order_title">Order permissions by name</string>
    <string name="preference_permission_order_true">Permissions are ordered by name</string>
    <string name="preference_permission_order_false">Permissions are ordered by application count</string>
    <string name="preference_category_order_title">Order categories by name</string>
    <string name="preference_category_order_true">Categories are ordered by name</string>
    <string name="preference_category_order_false">Categories are ordered by application count</string>
    <string name="menu_update">Update data</string>
    <string name="menu_preferences">Preferences</string>
    <string name="category_LOCATION">Access to location informations</string>
    <string name="category_PHONE_IDENTITY">Access to phone or user identity</string>
    <string name="category_MESSAGES">Access to mails, SMS, MMS</string>
    <string name="category_CONTACTS">Access to contacts</string>
    <string name="category_CALENDAR">Access to calendar</string>
    <string name="category_PAYING">Access to paying services</string>
    <string name="category_SYSTEM">Access to system settings</string>
    <string name="permission_ACCESS_ALL_DOWNLOADS">No description</string>
    <string name="permission_ACCESS_ASSISTED_GPS">No description</string>
    <string name="permission_ACCESS_BLUETOOTH_PRINTER">No description</string>
    <string name="permission_ACCESS_BLUETOOTH_SHARE">No description</string>
    <string name="permission_ACCESS_BROWSER">No description</string>
    <string name="permission_ACCESS_CACHE_FILESYSTEM">No description</string>
    <string name="permission_ACCESS_CELL_ID">No description</string>
    <string name="permission_ACCESS_CHECKIN_PROPERTIES">Allows read/write access to the "properties" table in the checkin database, to change values that get uploaded.</string>
    <string name="permission_ACCESS_COARSE_LOCATION">Allows an application to access coarse (e.g., Cell-ID, WiFi) location</string>
    <string name="permission_ACCESS_COARSE_UPDATES">No description</string>
    <string name="permission_ACCESS_DEV_STORAGE">No description</string>
    <string name="permission_ACCESS_DOWNLOAD_DATA">No description</string>
    <string name="permission_ACCESS_DOWNLOAD_MANAGER">No description</string>
    <string name="permission_ACCESS_DOWNLOAD_MANAGER_ADVANCED">No description</string>
    <string name="permission_ACCESS_DRM">No description</string>
    <string name="permission_ACCESS_FINE_LOCATION">Allows an application to access fine (e.g., GPS) location</string>
    <string name="permission_ACCESS_FM_RECEIVER">No description</string>
    <string name="permission_ACCESS_GPS">No description</string>
    <string name="permission_ACCESS_LGDRM">No description</string>
    <string name="permission_ACCESS_LOCATION">No description</string>
    <string name="permission_ACCESS_LOCATION_EXTRA_COMMANDS">Allows an application to access extra location provider commands</string>
    <string name="permission_ACCESS_MTP">No description</string>
    <string name="permission_ACCESS_MOCK_LOCATION">Allows an application to create mock location providers for testing</string>
    <string name="permission_ACCESS_NETWORK_STATE">Allows applications to access information about networks</string>
    <string name="permission_ACCESS_NETWORK_LOCATION">No description</string>
    <string name="permission_ACCESS_OBEX">No description</string>
    <string name="permission_ACCESS_SURFACE_FLINGER">Allows an application to use SurfaceFlinger\'s low level features</string>
    <string name="permission_ACCESS_UPLOAD_DATA">No description</string>
    <string name="permission_ACCESS_UPLOAD_MANAGER">No description</string>
    <string name="permission_ACCESS_WIFI_STATE">Allows applications to access information about Wi-Fi networks</string>
    <string name="permission_ACCESS_WIMAX_STATE">No description</string>
    <string name="permission_ACCOUNT_MANAGER">Allows applications to call into AccountAuthenticators.</string>
    <string name="permission_ADD_SYSTEM_SERVICE">No description</string>
    <string name="permission_ASEC_ACCESS">No description</string>
    <string name="permission_ASEC_CREATE">No description</string>
    <string name="permission_ASEC_DESTROY">No description</string>
    <string name="permission_ASEC_MOUNT_UNMOUNT">No description</string>
    <string name="permission_AUTHENTICATE_ACCOUNTS">Allows an application to act as an AccountAuthenticator for the AccountManager</string>
    <string name="permission_BACKUP">No description</string>
    <string name="permission_BACKUP_DATA">No description</string>
    <string name="permission_BATTERY_STATS">Allows an application to collect battery statistics</string>
    <string name="permission_BIND_APPWIDGET">Allows an application to tell the AppWidget service which application can access AppWidget\'s data.</string>
    <string name="permission_BIND_DEVICE_ADMIN">Must be required by device administration receiver, to ensure that only the system can interact with it.</string>
    <string name="permission_BIND_INPUT_METHOD">Must be required by an InputMethodService, to ensure that only the system can bind to it.</string>
    <string name="permission_BIND_REMOTEVIEWS">Must be required by aÿRemoteViewsService, to ensure that only the system can bind to it.</string>
    <string name="permission_BIND_WALLPAPER">Must be required by aÿWallpaperService, to ensure that only the system can bind to it.</string>
    <string name="permission_BLUETOOTH">Allows applications to connect to paired bluetooth devices</string>
    <string name="permission_BLUETOOTH_ADMIN">Allows applications to discover and pair bluetooth devices</string>
    <string name="permission_BOOT_COMPLETED">No description</string>
    <string name="permission_BRICK">Required to be able to disable the device (very dangerous!).</string>
    <string name="permission_BROADCAST_PACKAGE_REMOVED">Allows an application to broadcast a notification that an application package has been removed.</string>
    <string name="permission_BROADCAST_SMS">Allows an application to broadcast an SMS receipt notification</string>
    <string name="permission_BROADCAST_STICKY">Allows an application to broadcast sticky intents.</string>
    <string name="permission_BROADCAST_WAP_PUSH">Allows an application to broadcast a WAP PUSH receipt notification</string>
    <string name="permission_CALL">No description</string>
    <string name="permission_CALL_PHONE">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="permission_CALL_PRIVILEGED">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="permission_CAMERA">Required to be able to access the camera device.</string>
    <string name="permission_CHANGE_BACKGROUND_DATA_SETTING">No description</string>
    <string name="permission_CHANGE_COMPONENT_ENABLED_STATE">Allows an application to change whether an application component (other than its own) is enabled or not.</string>
    <string name="permission_CHANGE_CONFIGURATION">Allows an application to modify the current configuration, such as locale.</string>
    <string name="permission_CHANGE_NETWORK_STATE">Allows applications to change network connectivity state</string>
    <string name="permission_CHANGE_WIFI_MULTICAST_STATE">Allows applications to enter Wi-Fi Multicast mode</string>
    <string name="permission_CHANGE_WIFI_STATE">Allows applications to change Wi-Fi connectivity state</string>
    <string name="permission_CHANGE_WIMAX_STATE">No description</string>
    <string name="permission_CLEAR_APP_CACHE">Allows an application to clear the caches of all installed applications on the device.</string>
    <string name="permission_CLEAR_APP_USER_DATA">Allows an application to clear user data</string>
    <string name="permission_CONFIRM_FULL_BACKUP">No description</string>
    <string name="permission_CONNECTIVITY_INTERNAL">No description</string>
    <string name="permission_CONTROL_LOCATION_UPDATES">Allows enabling/disabling location update notifications from the radio.</string>
    <string name="permission_DELETE_CACHE_FILES">Allows an application to delete cache files.</string>
    <string name="permission_DELETE_PACKAGES">Allows an application to delete packages.</string>
    <string name="permission_DELETE_SMS">No description</string>
    <string name="permission_DEVICE_POWER">Allows low-level access to power management</string>
    <string name="permission_DIAGNOSTIC">Allows applications to RW to diagnostic resources.</string>
    <string name="permission_DISABLE_KEYGUARD">Allows applications to disable the keyguard</string>
    <string name="permission_DOWNLOAD_WITHOUT_NOTIFICATION">No description</string>
</resources>