<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <include layout="@layout/title_bar" />
  <TextView android:id="@+id/permission_detail_name"

  			android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  <TextView
      		android:text="@string/category_detail_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView android:id="@+id/permission_detail_description"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView
      		android:text="@string/permission_detail_application_count"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content" />
  <TextView android:id="@+id/permission_detail_application_count"

      android:layout_height="wrap_content"
      android:layout_width="wrap_content" />
  <TextView
  			android:text="@string/permission_detail_application_using"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <ListView android:id="@+id/permission_detail_application_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
</LinearLayout>
